edit nl_NL.html edit stylesheet.css edit languagepicker to match current myparcel style edit index.html

--- a/css/languagepicker.css
+++ b/css/languagepicker.css
@@ -1,51 +1,56 @@
 /* language picker*/
-
-.languageTitel{
-    float: right;
-    margin: 0 48px;
-    z-index: 300;
-    position: absolute;
-    right: 50px;
-    top: 30px;
-}
-
 .languagepicker {
-    background-color: #FFF;
-    display: inline-block;
-    padding: 0;
-    height: 40px;
-    overflow: hidden;
-    transition: all .3s ease;
-    vertical-align: top;
-    float: none;
-    margin: 0 48px;
+    color: #fff;
+    font-weight: 400;
+    background-color: transparent;
+    margin: 0 24px;
     z-index: 300;
     position: absolute;
-    right: 0px;
+    right: 21px;
+    overflow: visible;
     top: 21px;
+    text-shadow: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    user-select: none;
+    line-height: 1.5;
+    border-radius: 20px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
-.languagepicker:hover {
-    /* don't forget the 1px border */
-    height: auto;
-}
-
-.languagepicker a{
-    color: #000;
+.languagepicker a {
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
     text-decoration: none;
+    white-space: nowrap;
+    text-align: center;
+    vertical-align: middle;
+
 }
 
 .languagepicker li {
-    display: block;
-    padding: 0px 20px;
-    line-height: 40px;
-    border-top: 1px solid #EEE;
+
+    display: inline-block;
+    border: 1px solid white;
+    padding: .375rem .75rem;
+    letter-spacing: normal;
+    word-spacing: normal;
+    border-radius: 20px;
+    transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
+    -webkit-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
 }
 
-.languagepicker li:hover{
+.languagepicker li:hover {
     background-color: #EEE;
 }
 
-.roundborders {
-    border-radius: 5px;
+.languagepicker img {
+    height: 16px;
+    width: auto;
+    margin: 5px;
+    border-style: none;
 }
