--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,11 +4,15 @@
 
 body {
     padding: 0;
-    margin: 0;
     font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.5;
     color: #606c71;
     position: relative;
+    display: flex;
+}
+
+img {
+    margin-left: 0.5em;
 }
 
 a {
@@ -190,6 +194,10 @@ h1 {
     width: 100%;
 }
 
+.hidden {
+    visibility: hidden;
+}
+
 .h2item {
     display: none;
     margin-left: 15px;
@@ -222,14 +230,14 @@ h1 {
 }
 
 .main-content h1, .main-content h2 {
-    margin-top: 0.5em;
-    margin-bottom: 0.1em;
+    margin-top: 1em;
+    margin-bottom: 0.3em;
     font-weight: normal;
     color: #0F5C47;
 }
 
 .main-content h3 {
-    margin-top: 0.3em;
+    margin-top: 0.8em;
     margin-bottom: 0.1em;
     margin-left: 0.5em;
     font-weight: normal;
@@ -244,7 +252,7 @@ h1 {
 }
 
 .main-content p {
-    margin-top: 0.3em;
+    margin-top: 0.1em;
     margin-bottom: 0.5em;
     margin-left: 1em;
     text-align: justify;
@@ -421,4 +429,8 @@ h1 {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+div.menu-items#text {
+    color: #fff;
 }
