--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,6 +13,13 @@ body {
 
 img {
     margin-left: 0.5em;
+    margin-bottom: 1em;
+}
+
+video {
+    margin-left: 0.5em;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
 }
 
 a {
